--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container mx-auto px-4 py-6">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center mb-4 md:mb-0">
-                    <img src="https://i.ibb.co/NnpTFV3S/logo.png" alt="شعار مطعم جمار" class="h-16 ml-4" />
+                    <img src="https://placehold.co/100" alt="شعار مطعم جمار" class="h-16 ml-4">
                     <h1 class="text-3xl md:text-4xl font-bold">جَمَار | JAMAR</h1>
                 </div>
                 <nav class="flex space-x-1 space-x-reverse">
