--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             }
             
             const phoneNumber = '+972599888358';
-            let message = 'السلام عليكم، أريد طلب التالي:\n\n';
+            let message = 'السلام عليكم، أريد طلب التالي من منيو جَمَار:\n\n';
             
             cart.forEach(item => {
                 message += `- ${item.arabicName || item.name}: ${item.price.toFixed(2)} شيكل\n`;
