--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                         <div class="flex flex-col items-center text-center">
                             <div class="w-32 h-32 rounded-full overflow-hidden shadow-md">
-                                <img src="https://placehold.co/300x300/bbbbbb/666666?Text=Hasan" alt="صورة حسن" class="w-full h-full object-cover">
+                                <img src="https://i.ibb.co/h1Fpq943/5e3a3f15-33c6-4f50-b5aa-1781e49153da-removebg-preview.png" alt="صورة حسن" class="w-full h-full object-cover">
                             </div>
                             <h3 class="font-semibold mt-2">حسن</h3>
                             <p class="text-sm text-gray-600 mt-1">***** <br>*********.</p>
