--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@ background-color: #128C7E;
 </div>
 <nav class="flex space-x-1 space-x-reverse">
 <button id="homeBtn" class="nav-btn px-4 py-2 rounded-lg active">الرئيسية</button>
-<button id="menuBtn" class="nav-btn px-4 py-2 rounded-lg hover:bg-yellow-700">القائمة</button>
-<button id="aboutBtn" class="nav-btn px-4 py-2 rounded-lg hover:bg-yellow-700">عن المطعم</button>
-<button id="contactBtn" class="nav-btn px-4 py-2 rounded-lg hover:bg-yellow-700">اتصل بنا</button>
-<button id="cartBtn" class="relative px-4 py-2 rounded-lg hover:bg-yellow-700 flex items-center">
+<button id="menuBtn" class="nav-btn px-4 py-2 rounded-lg hover:bg-orange-700">القائمة</button>
+<button id="aboutBtn" class="nav-btn px-4 py-2 rounded-lg hover:bg-orange-700">عن المطعم</button>
+<button id="contactBtn" class="nav-btn px-4 py-2 rounded-lg hover:bg-orange-700">اتصل بنا</button>
+<button id="cartBtn" class="relative px-4 py-2 rounded-lg hover:bg-orange-700 flex items-center">
 <i class="fas fa-shopping-cart ml-2"></i>
 السلة
 <span id="cartCount" class="absolute -top-2 -left-1 bg-red-600 text-white text-xs rounded-full h-5 w-5 flex items-center justify-center">0</span>
@@ -131,7 +131,7 @@ background-color: #128C7E;
 <p class="text-gray-700">مهمتنا هي تقديم تجربة طعام لا تُنسى حيث تلتقي الجودة بالإبداع في كل قضمة.</p>
 </div>
 <div class="md:w-1/2">
-<img src="/jamarRes/logo.png" alt="Jamar-Logo" class="w-full h-full object-cover rounded-xl">
+<img src="jamarRes/logo.png" alt="Jamar-Logo" class="w-full h-full object-cover rounded-xl">
 </div>
 </div>
 <div class="py-8 border-t border-gray-200 mt-8">
@@ -206,7 +206,7 @@ background-color: #128C7E;
 <label for="message" class="block text-gray-700 mb-2">الرسالة</label>
 <textarea id="message" rows="4" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
 </div>
-<button type="submit" class="bg-primary hover:bg-orange-600 text-white font-bold py-2 px-6 rounded-lg transition duration-300">
+<button type="submit" class="bg-primary bg-orange-600 text-white font-bold py-2 px-6 rounded-lg transition duration-300">
 إرسال الرسالة
 </button>
 </form>
