--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ transform: translateY(-5px);
 box-shadow: 0 10px 20px rgba(0,0,0,0.1);
 }
 .price-tag {
-background-color: var(--primary);
+background-color: var(--secondary);
 }
 .section-divider {
 border-bottom: 3px solid var(--primary);
