--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ background-color: #128C7E;
 </button>
 </div>
 <div class="md:w-1/2">
-<img src="https://placehold.co/800x600" alt="برجر مميز من جمار" class="w-full h-full object-cover">
+<img src="/jamarRes/images/burger1.jpg" alt="برجر مميز من جمار" class="w-full h-full object-cover">
 </div>
 </div>
 </div>
