--- a/index.html
+++ b/index.html
@@ -327,7 +327,10 @@ categories: ['burgers', 'wings', 'salads', 'rolls', 'tacos', 'snacks', 'drinks']
 burgers: [
 { id: 101, name: 'Beef Burger', arabicName: 'برجر لحم بقري', price: 25.99, image: 'https://placehold.co/600x400', alt: 'برجر لحم بقري بالجبنة الذائبة والخضروات الطازجة' },
 { id: 102, name: 'Fried Chicken Burger', arabicName: 'برجر دجاج مقلي', price: 22.50, image: 'https://placehold.co/600x400', alt: 'برجر دجاج مقلي مقرمش' },
-{ id: 103, name: 'Mushroom Swiss Burger', arabicName: 'برجر فطر سويسري', price: 28.00, image: 'https://placehold.co/600x400', alt: 'برجر لحم مع فطر وجبنة سويسرية' }
+{ id: 103, name: 'Mushroom Swiss Burger', arabicName: 'برجر فطر سويسري', price: 28.00, image: 'https://placehold.co/600x400', alt: 'برجر لحم مع فطر وجبنة سويسرية' },
+  id: 104, name: 'Mushroom Swiss Burger', arabicName: 'برجر فطر سويسري', price: 28.00, image: 'https://placehold.co/600x400', alt: 'برجر لحم مع فطر وجبنة سويسرية' },
+  id: 105, name: 'Mushroom Swiss Burger', arabicName: 'برجر فطر سويسري', price: 28.00, image: 'https://placehold.co/600x400', alt: 'برجر لحم مع فطر وجبنة سويسرية' 
+}
 ],
 wings: [
 { id: 301, name: 'Buffalo Wings', arabicName: 'أجنحة بافلو', price: 35.99, image: 'https://placehold.co/600x400', alt: 'أجنحة دجاج مغطاة بصوص البافلو' },
