--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ background-color: #128C7E;
 <div class="container mx-auto px-4 py-6">
 <div class="flex flex-col md:flex-row justify-between items-center">
 <div class="flex items-center mb-4 md:mb-0">
-<img src="images/logo.png" alt="شعار مطعم جمار" class="h-16 ml-4">
+<img src="images/logorbg.png" alt="شعار مطعم جمار" class="h-16 ml-4">
 <h1 class="text-3xl md:text-4xl font-bold">جَمَار | JAMAR</h1>
 </div>
 <nav class="flex space-x-1 space-x-reverse">
@@ -140,14 +140,14 @@ background-color: #128C7E;
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
 <div class="flex flex-col items-center text-center">
 <div class="w-32 h-32 rounded-full overflow-hidden shadow-md">
-<img src="images/logo.png" alt="Hasan" class="w-full h-full object-cover">
+<img src="images/logorbg.png" alt="Hasan" class="w-full h-full object-cover">
 </div>
 <h3 class="font-semibold mt-2">حسن</h3>
 <p class="text-sm text-gray-600 mt-1">**** *** ، <br>******.</p>
 </div>
 <div class="flex flex-col items-center text-center">
 <div class="w-32 h-32 rounded-full overflow-hidden shadow-md">
-<img src="images/logo.png" alt="Yazan" class="w-full h-full object-cover">
+<img src="images/logorbg.png" alt="Yazan" class="w-full h-full object-cover">
 </div>
 <h3 class="font-semibold mt-2">يزن</h3>
 <p class="text-sm text-gray-600 mt-1">***** <br>*********.</p>
