--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ background-color: #128C7E;
 <p class="text-gray-700">مهمتنا هي تقديم تجربة طعام لا تُنسى حيث تلتقي الجودة بالإبداع في كل قضمة.</p>
 </div>
 <div class="md:w-1/2">
-<img src="images/logo.png" alt="طاهٍ يحضر برجر جورمي" class="w-full h-full object-cover rounded-xl">
+<img src="images/logorbg.png" alt="logo" class="w-full h-full object-cover rounded-xl">
 </div>
 </div>
 <div class="py-8 border-t border-gray-200 mt-8">
