--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <div id="saucesOptions" class="flex flex-wrap gap-2">
                         </div>
                 </div>
-                <button id="finalizeAddBtn" class="w-full mt-6 bg-primary text-white font-bold py-3 rounded-lg transition duration-300">أضف إلى السلة</button>
+                <button id="finalizeAddBtn" class="w-full mt-6 bg-orange-600 text-white font-bold py-3 rounded-lg transition duration-300">أضف إلى السلة</button>
             </div>
         </div>
 
