--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <h4 class="font-bold mb-2">نوع الطلب:</h4>
                         <div id="orderTypeButtons" class="flex gap-2">
                             <button data-type="dineIn" class="px-4 py-2 border rounded-lg transition active">داخل المطعم</button>
-                            <button data-type="takeaway" class="px-4 py-2 border rounded-lg transition">توصيل خارجي</button>
+                            <button data-type="takeaway" class="px-4 py-2 border rounded-lg transition">خارج المطعم</button>
                         </div>
                         
                         <div id="tableNumber" class="mt-3">
@@ -272,7 +272,7 @@
                         <div id="deliveryCities" class="mt-3 hidden">
                             <h4 class="font-bold mb-2">اختر المدينة (رسوم التوصيل):</h4>
                             <div id="cityButtons" class="flex flex-wrap gap-2">
-                                <button class="city-btn px-4 py-2 border rounded-full transition" data-city="here" data-delivery="0">أنا هنا (0 ش)</button>
+                                <button class="city-btn px-4 py-2 border rounded-full transition" data-city="here" data-delivery="0">أنا استلم (0 ش)</button>
                                 <button class="city-btn px-4 py-2 border rounded-full transition" data-city="tulkarm" data-delivery="10">طولكرم 10 ش</button>
                                 <button class="city-btn px-4 py-2 rounded-full transition" data-city="jenin" data-delivery="20">جنين 20 ش</button>
                                 <button class="city-btn px-4 py-2 rounded-full transition" data-city="nablus" data-delivery="25">نابلس 25 ش</button>
