--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                 { id: 702, name: 'Mozzarella Sticks', arabicName: 'أصابع الموزاريلا', price: 15.00, description: 'أصابع موزاريلا ذهبية مقلية تقدم مع صوص المارينارا.', image: 'https://placehold.co/600x400', alt: 'أصابع موزاريلا مقلية', category: 'snacks' }
             ],
             drinks: [
-                { id: 801, name: 'Coca-Cola', arabicName: 'كوكا كولا', price: 3.00, description: 'مشروب غازي منعش.', image: 'images/IMG_5210.jpeg', alt: 'علبة كوكا كولا', category: 'drinks' },
+                { id: 801, name: 'Coca-Cola', arabicName: 'كوكا كولا', price: 3.00, description: 'مشروب غازي منعش.', image: 'images/Cocacola.png', alt: 'علبة كوكا كولا', category: 'drinks' },
                 { id: 802, name: 'Orange Juice', arabicName: 'عصير برتقال', price: 6.00, description: 'عصير برتقال طبيعي طازج.', image: 'https://placehold.co/600x400', alt: 'كأس عصير برتقال طازج', category: 'drinks' }
             ],
             saladsAddons: [
