--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <button class="category-btn px-4 py-2 rounded-full border border-gray-300 transition" data-category="wings">أجنحة</button>
                 <button class="category-btn px-4 py-2 rounded-full border border-gray-300 transition" data-category="salads">سلطات</button>
                 <button class="category-btn px-4 py-2 rounded-full border border-gray-300 transition" data-category="rolls">رولات</button>
-                <button class="category-btn px-4 py-2 rounded-full border border-gray-300 transition" data-category="tacos">تاكوس</button>
+                <button class="category-btn px-4 py-2 rounded-full border border-gray-300 transition" data-category="tacos">بومر</button>
                 <button class="category-btn px-4 py-2 rounded-full border border-gray-300 transition" data-category="snacks">مقبلات</button>
                 <button class="category-btn px-4 py-2 rounded-full border border-gray-300 transition" data-category="drinks">مشروبات</button>
             </div>
